--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
 * {
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
+    border: 10px solid black;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: xx-large;
+    font-weight: bold;
+    
+    padding: 80px;
+    flex-direction: column;
+    gap: 40px;
+
+}
+
+button {
+   background: black;
+   color: antiquewhite;
+   padding: 20px;
+   border-radius: 8px;
+   font-size: large;
+   
 }
